@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-12T08:34:02Z",
+  "timestamp" : "2022-10-12T16:49:30Z",
   "count_outdated" : 827,
   "uniques_outdated" : 433,
-  "count" : 843,
-  "uniques" : 443,
+  "count" : 844,
+  "uniques" : 444,
   "clones" : [
     {
       "timestamp": "2022-09-28T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-10-11T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
